fix overflow in body

--- a/artist-page.css
+++ b/artist-page.css
@@ -13,16 +13,15 @@
   font-weight: 700;
 }
 
-html {
-  height: 100%;
-}
-
 /* body {
 
   z-index: 0;
   background: linear-gradient(
      */
 body {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   font-family: "Circular", sans-serif;
